deploy/grafana-ceph-dynamic/svc.yaml
apiVersion: v1
kind: Service

metadata:
  name: grafana
  annotations:
    prometheus.io/scrape: "true"

spec:
#  type: NodePort
  ports:
  - port: 3000
  selector:
    app: grafana
